--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "template-code"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Thibaud ROBIN <trobin@esgi.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
