--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
       - id: detect-private-key
       - id: end-of-file-fixer
       - id: mixed-line-ending
-      - id: no-commit-to-branch
+      # - id: no-commit-to-branch
       - id: trailing-whitespace
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
