--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 description = ""
 authors = ["Thibaud ROBIN <trobin@esgi.com>"]
 readme = "README.md"
+packages = [
+  { include = "src" },
+  { include = "tp1", from = "src" },
+  { include = "tp3", from = "src" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -18,5 +23,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-tp1 = "src.tp1.main:main"
-tp3 = "src.tp3.main:main"
+tp1 = "tp1.main:main"
+tp3 = "tp3.main:main"
