--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ scapy = "^2.6.0"
 pygal = "^3.0.5"
 fpdf2 = "^2.8.1"
 pytest = "^8.3.5"
+pandas = "^2.3.1"
+matplotlib = "^3.10.3"
+cryptography = "^45.0.5"
+psutil = "^7.0.0"
+openai = "^1.97.1"
 
 [build-system]
 requires = ["poetry-core"]
